Attempt at a fix for images on small screens

--- a/index.css
+++ b/index.css
@@ -150,9 +150,13 @@ a > img, iframe {
   height: 0;
 }
 
-.image-container > img, .video-container > iframe {
+.video-container > iframe {
   width: 100%;
   height: 100%;
+}
+
+.image-container > img {
+  width: 100%;
 }
 
 .tag a {
